tests/fixtures/invalid/pow_float_int_dict.py
# Cannot call pow() with Float, Int, Dict[str, int]
x = pow(1.0, 1, {"a": 1})
